--- a/src/presentation/app/App.css
+++ b/src/presentation/app/App.css
@@ -1,17 +1,13 @@
 .container {
-  display: flex;
-  flex-direction: column;
   height: 100vh;
   width: 100vw;
-  align-items: center;
-  justify-content: space-between;
+  display: flex;
 }
 
 .header {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100%;
   padding: 0.1rem;
   background-color: #333;
   color: #fff;
@@ -23,6 +19,7 @@
 
 .grid {
   display: grid;
+  justify-content: center;
 }
 
 .row {
