--- a/src/presentation/app/App.css
+++ b/src/presentation/app/App.css
@@ -36,15 +36,15 @@
 }
 
 .cell.start {
-  background-color: #0e49b5;
+  background-color: #9ad0ec;
 }
 
 .cell.end {
-  background-color: #c70039;
+  background-color: #f05454;
 }
 
 .cell.empty {
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .cell.wall {
@@ -52,7 +52,7 @@
 }
 
 .cell.bounding {
-  animation: bounding 0.2s ease-in-out;
+  animation: bounding 0.4s ease-in-out;
 }
 
 .cell.explored {
@@ -106,12 +106,9 @@
 
 @keyframes bounding {
   0% {
+    border-radius: 50%;
     opacity: 0;
-    transform: scale(0.2);
-  }
-  60% {
-    opacity: 1;
-    transform: scale(1.2);
+    transform: scale(0);
   }
   100% {
     opacity: 1;
