--- a/src/presentation/app/App.css
+++ b/src/presentation/app/App.css
@@ -64,7 +64,7 @@
 }
 
 .cell.path {
-  background-color: #38e54d;
+  background-color: #e3bec6;
 }
 
 .cell.pathing {
@@ -92,7 +92,7 @@
   0% {
     border-radius: 50%;
     transform: scale(0.2);
-    background-color: #38e54d;
+    background-color: #e3bec6;
   }
   80% {
     transform: scale(1.3);
@@ -100,7 +100,7 @@
   }
   100% {
     transform: scale(1);
-    background-color: #38e54d;
+    background-color: #e3bec6;
   }
 }
 
