--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,11 @@ label {
   filter: blur(10em);
   z-index: -1;
 }
+
+.tooltip {
+  @apply invisible absolute bg-gray-800 text-white text-xs rounded px-2 py-1 transition-all duration-300 ease-in-out translate-y-2 -translate-x-1/2;
+}
+
+.tooltip-container:hover .tooltip {
+  @apply visible z-10;
+}
