--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 body {
-  background-color: black;
+  background-image: linear-gradient(to top, #fcdab7, #1e5f74, #133b5c, #1d2d50);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 label {
@@ -33,4 +35,14 @@ label {
 
 .tooltip-container:hover .tooltip {
   @apply visible z-10;
+}
+
+.sidebar-resizer {
+  cursor: col-resize;
+  resize: horizontal;
+}
+
+.app-sidebar-resizer:hover {
+  width: 3px;
+  background: #c1c3c5b4;
 }
